[gd_scene load_steps=6 format=3 uid="uid://hslsq00oju8x"]

[ext_resource type="Script" path="res://square.gd" id="1_yxyyc"]
[ext_resource type="Texture2D" uid="uid://ckv5ob530pmjp" path="res://icon.svg" id="2_xirhf"]
[ext_resource type="Texture2D" uid="uid://d4fjwgsqxiwyb" path="res://assets/monkPLUS.png" id="3_a7nr4"]
[ext_resource type="Texture2D" uid="uid://83jg3j6lmqah" path="res://assets/monk.png" id="4_l0url"]
[ext_resource type="Texture2D" uid="uid://odjyfqq6fn4m" path="res://assets/monkMINUS.png" id="5_5tk0x"]

[node name="SQUARE" type="Node2D"]
script = ExtResource("1_yxyyc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xirhf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MonkButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("3_a7nr4")
texture_pressed = ExtResource("4_l0url")
stretch_mode = 3

[node name="SpiritButton" type="TextureButton" parent="MarginContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("5_5tk0x")
texture_pressed = ExtResource("4_l0url")
stretch_mode = 3

[connection signal="button_down" from="MarginContainer/MonkButton" to="." method="_on_monk_button_button_down"]
[connection signal="button_down" from="MarginContainer/SpiritButton" to="." method="_on_spirit_button_button_down"]
